# zenith-unified

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml  zenith.spec
.github/workflows/: ci.yml
data/devices/: sony_xz2_h8266.json
data/playbooks/: bootloader-unlock.yaml  hard-brick---mediatek.yaml  mtk-brom-bypass.yaml  sony-xz2-frp-adb.yaml  sony-xz2-frp-fastboot.yaml
docker/: .dockerignore  Dockerfile  docker-compose.yml
docs/: developer_guide.md  hardware_setup.md  user_guide.md
scripts/: build_exe.py  check_sprd_device.py  hardware_test.py  install_sprd_driver.py  sony_flash.py
src/zenith/: __init__.py  __main__.py  config.py
src/zenith/adapters/: __init__.py  _runner.py  _sprd_protocol.py  adb.py  allwinner_fel.py  apple_dfu.py  diag_at.py  fastboot.py  mediatek_brom.py  protocol.py  qualcomm_edl.py  registry.py  rockchip.py  samsung_odin.py  sony_s1.py  uart.py  unisoc_sprd.py  usb_transport.py
src/zenith/ai/: __init__.py  intent.py  provider.py  rag.py
src/zenith/ai/mcp/: __init__.py
src/zenith/cli/: __init__.py  dashboard.py  main.py
src/zenith/core/: __init__.py  audit.py  backup_manager.py  consent.py  device.py  device_manager.py  discovery.py  event_bus.py  exceptions.py  policy.py
src/zenith/data/: DEEP_ATLAS.md
src/zenith/data/devices/: _schema.json  fairphone_4_fp4.json  google_pixel_4a_sunfish.json  google_pixel_6a_bluejay.json  google_pixel_7.json  huawei_p30_vog-l29.json  lg_g8_thinq_alphatm.json  motorola_moto_g51_cypfr.json  nokia_c32_ta1534.json  nokia_g21_ta-1413.json  oneplus_7t_hotdogb.json  oneplus_9_pro_lemonade.json  oneplus_nord_2_dn2103.json  samsung_a52_sm-a525f.json  samsung_galaxy_s20_exynos.json  samsung_galaxy_s23_sm-s911b.json  samsung_note20_ultra_n985f.json  sony_xperia_1_iii.json  xiaomi_mi_11_venus.json  xiaomi_poco_f3_alioth.json  xiaomi_redmi_note_12_topaz.json
src/zenith/data/playbooks/: apple-dfu-triage.yaml  frp-bypass.yaml  hard-brick---qualcomm.yaml  nokia-c32-frp-bypass.yaml  samsung-odin-firmware-rescue.yaml  soft-brick---bootloop.yaml  sony-xz2-frp-edl.yaml  sony-xz2-frp-newflasher.yaml
src/zenith/engines/: __init__.py  diagnostics.py  flash.py  flash_protocols.py  playbook_executor.py  repair.py  triage.py
src/zenith/gui/: __init__.py
src/zenith/gui/customtkinter/: __init__.py
src/zenith/gui/pwa/: __init__.py
src/zenith/gui/pyside6/: __init__.py  main_window.py  theme.py
src/zenith/gui/pyside6/tabs/: arsenal.py  dashboard.py  diagnostics.py  repair.py
src/zenith/gui/pyside6/widgets/: log_widgets.py
src/zenith/knowledge/: __init__.py  atlas_parser.py  device_profile.py  device_registry.py  knowledge_base.py
src/zenith/server/: app.py
src/zenith/tools/: __init__.py  arsenal_shell.py  fastboot_fuzz.py  panic_inject.py  sahara_ping.py  token_hunter.py  vcc_matrix.py
tests/: conftest.py
tests/integration/: test_adapter_dispatch.py  test_cli.py  test_hardware_mocks.py
tests/unit/: test_adapter_runner.py  test_adapters.py  test_ai_mcp.py  test_ai_provider.py  test_ai_rag.py  test_atlas_parser.py  test_cli.py  test_core.py  test_dashboard.py  test_engines.py  test_foundation.py  test_gui.py  test_profiles.py  test_rag.py  test_server.py  test_tools.py
