[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lanfear-zenith"
version = "0.1.0"
description = "Zenith Unified — AI-powered USB/ADB tool for Android phone repair, data recovery, diagnostics, and flashing."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Lanfear Diagnostics", email = "lanfear@diagnostics.dev" },
]
keywords = [
    "android",
    "adb",
    "data-recovery",
    "phone-repair",
    "usb",
    "fastboot",
    "edl",
    "brom",
    "flash",
    "backup",
    "diagnostics",
    "forensics",
    "frp-bypass",
    "qualcomm",
    "mediatek",
    "unisoc",
    "samsung",
    "sony",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Utilities",
    "Topic :: System :: Recovery Tools",
    "Topic :: System :: Hardware",
    "Environment :: Console",
    "Environment :: Win32 (MS Windows)",
    "Environment :: X11 Applications :: Qt",
]

dependencies = [
    "adbutils>=2.12",
    "psutil>=5.9",
    "loguru>=0.7",
    "PySide6>=6.6",
    "qtawesome>=1.3",
    "fpdf2>=2.7",
    "cryptography>=42",
    "zeroconf>=0.131",
    "packaging>=24",
    "pyyaml>=6.0",
    "pyserial>=3.5",
    "pyusb>=1.2",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "click>=8.0",
    "rich>=13.0",
    "fastapi>=0.100",
    "uvicorn>=0.22",
    "websockets>=11.0",
    "requests>=2.31",
    "httpx>=0.25",
]

[project.optional-dependencies]
ai = [
    "chromadb==0.4.22",
    "sentence-transformers==2.2.2",
    "mistralai==0.4.0",
]
gui = [
    "PySide6>=6.6",
    "qtawesome>=1.3",
    "customtkinter>=5.2.0",
]
server = [
    "fastapi>=0.100",
    "uvicorn>=0.22",
    "websockets>=11.0",
]
dev = [
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.11",
    "ruff>=0.6",
    "mypy>=1.12",
    "pyinstaller>=6.10",
]

[project.scripts]
zenith = "zenith.cli.main:main"
zenith-server = "zenith.server.app:main"

[project.urls]
Homepage = "https://github.com/lanfear/zenith-unified"
Repository = "https://github.com/lanfear/zenith-unified.git"
Issues = "https://github.com/lanfear/zenith-unified/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "W",    # pycodestyle warnings
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "SIM108", # use ternary operator
]

[tool.ruff.lint.isort]
known-first-party = ["zenith"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = [
    "src/zenith/gui/",
    "tests/",
]

[[tool.mypy.overrides]]
module = [
    "serial.*",
    "usb.*",
    "yaml",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "zenith.tools.*",
    "zenith.adapters.*",
    "zenith.gui.*",
    "zenith.server.*",
    "zenith.ai.mcp.*",
    "zenith.ai.rag",
    "zenith.knowledge.atlas_parser",
    "zenith.engines.diagnostics",
]
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = [
    "zenith.tools.token_hunter",
    "zenith.ai.rag",
    "zenith.adapters.adb",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--cov=src/zenith",
    "--cov-report=term",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests that require real devices or external tools",
    "e2e: marks end-to-end tests",
]

[tool.coverage.run]
source = ["src/zenith"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if __name__ == \"__main__\":",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "@(abc\\.)?abstractmethod",
]
ignore_errors = true

[tool.coverage.html]
directory = "htmlcov"
